examples/datalog/18_advanced_patterns/44_grouping_sets.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_grouping
Knowledge graph 'test_grouping' created.
Switched to knowledge graph: test_grouping
> .kg use test_grouping
Switched to knowledge graph: test_grouping
> +orders[(1, "Alice", "Widget", 100), (2, "Bob", "Gadget", 200), (3, "Alice", "Widget", 150)].
Inserted 3 fact(s) into 'orders'.
> +by_customer(Customer, <SUM:Amount>) :- orders(_, Customer, _, Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
